# bot-cli

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CONTRIBUTING.md  README.md  conftest.py  old_pyproject.toml_old  old_requirements.txt_old  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black-check.yml  flake8-check.yml  pytest.yml
src/: __init__.py  bot.py  cli_utils.py  main.py  repo.py  settings.py  utils.py
src/click/: aliased_group.py
src/config/: config.py
src/rapportini/: __init__.py  __main__.py  add.py  ls.py  main.py  missing.py  rapportini_printer.py  rm.py
src/repositories/: bot.py  credentials.json  events_printer.py  google.py  location_finder.py  secrets.py
src/settings/: __init__.py  __main__.py  autocompletion.py  empty_cache.py  main.py  whoami.py
tests/unit/: sample_config.toml  test_defaults.py  test_main.py  test_utils.py
tests/unit/config/: test_config.py
tests/unit/repositories/: test_bot.py  test_location_finder.py
