[tool.poetry]
name = "bot-cli"
version = "1.0.0"
description = "The handy CLI for Bot."
authors = []
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
click = "^7.1.2"
toml = "^0.10.2"
fcache = "^0.4.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
requests-mock = "^1.8.0"

[tool.poetry.scripts]
bot = "src.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
